# mjolne_vibes

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_AGENT_RUST_PLAN.md  Cargo.toml  README.md  compose.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pre-commit.yml
.mjolne/: subsystem_rules.json
docs/: ARCHITECTURE.md  ROADMAP.md  RUNBOOK.md  SAFETY.md  TASK_BOARD.md  TESTING.md  WORKFLOW.md
docs/legacy/: README.md
docs/legacy/2026-02/: AGENTS.md  README.md  ROADMAP.md  RUNBOOK.md  TASK_BOARD_HISTORY_2026-02-20.md
docs/reviews/: deep_code_review_2026-02-19.md
eval/: cases.yaml
scripts/: cleanup_ollama_data.sh  install.sh  install_hooks.sh
src/: answer_format.rs  config.rs  lib.rs  main.rs  test_support.rs
src/agent/: mod.rs
src/eval/: mod.rs
src/graph/: mod.rs  watch.rs
src/model/: client.rs
src/server/: mod.rs
src/studio/: canvas.rs  events.rs  mod.rs  renderer.rs
src/tools/: mod.rs
tests/: chat_transport_parity.rs
